; ModuleID = '/home/carl/AnghaBench/esp-idf/components/driver/extr_gpio.c_gpio_intr_enable.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/driver/extr_gpio.c_gpio_intr_enable.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [18 x i8] c"GPIO number error\00", align 1
@ESP_ERR_INVALID_ARG = common dso_local global i32 0, align 4
@gpio_spinlock = common dso_local global i32 0, align 4
@isr_core_id = common dso_local global i64 0, align 8
@GPIO_ISR_CORE_ID_UNINIT = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @gpio_intr_enable(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i32, i32* %2, align 4
  %4 = call i32 @GPIO_IS_VALID_GPIO(i32 %3)
  %5 = load i32, i32* @ESP_ERR_INVALID_ARG, align 4
  %6 = call i32 @GPIO_CHECK(i32 %4, i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str, i64 0, i64 0), i32 %5)
  %7 = call i32 @portENTER_CRITICAL(i32* @gpio_spinlock)
  %8 = load i64, i64* @isr_core_id, align 8
  %9 = load i64, i64* @GPIO_ISR_CORE_ID_UNINIT, align 8
  %10 = icmp eq i64 %8, %9
  br i1 %10, label %11, label %13

11:                                               ; preds = %1
  %12 = call i64 (...) @xPortGetCoreID()
  store i64 %12, i64* @isr_core_id, align 8
  br label %13

13:                                               ; preds = %11, %1
  %14 = call i32 @portEXIT_CRITICAL(i32* @gpio_spinlock)
  %15 = load i32, i32* %2, align 4
  %16 = load i64, i64* @isr_core_id, align 8
  %17 = call i32 @gpio_intr_enable_on_core(i32 %15, i64 %16)
  ret i32 %17
}

declare dso_local i32 @GPIO_CHECK(i32, i8*, i32) #1

declare dso_local i32 @GPIO_IS_VALID_GPIO(i32) #1

declare dso_local i32 @portENTER_CRITICAL(i32*) #1

declare dso_local i64 @xPortGetCoreID(...) #1

declare dso_local i32 @portEXIT_CRITICAL(i32*) #1

declare dso_local i32 @gpio_intr_enable_on_core(i32, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
